# rpi-battery-monitor

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
avr/: .gitignore  build-and-upload.sh  monitor.c
src/: cbits.c  ffi.rs  main.rs  munin.cfg  sched.rs
