[package]
name = "rpi-battery-monitor"
version = "0.1.0"
description = "Monitor battery voltage from a Raspberry Pi"
repository = "https://github.com/kmcallister/rpi-battery-monitor"
readme = "README.md"
keywords = ["Raspberry Pi", "RPi", "battery", "munin"]
categories = ["embedded"]
license = "MIT/Apache-2.0"
authors = ["Keegan McAllister <mcallister.keegan@gmail.com>"]

[dependencies]
libc = "0.2"
time = "0.1"
errno = "0.2"

[build-dependencies]
gcc = "0.3"
